--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="sidebar">
-
         <nav class="sidebar__navigation">
             <div class="logo">
                 <a href="">
@@ -33,7 +32,6 @@
                     </li>
                 </ul>
         </nav>
-
         <div class="library">
             <div class="library__content">
                 <button class="library__button">
@@ -61,7 +59,18 @@
                 </button>
             </div>
         </div>
-
     </div>
+
+    <footer class="disclaimer-premium">
+        <div class="text">
+            <p class="disclaimer-premium__title">Testar o Premium de graça</p>
+            <p class="disclaimer-premium__subtitle">
+                Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.
+            </p>
+        </div>
+        <div class="button">
+            <button type="button">Inscreva-se grátis</button>
+        </div>
+    </footer>
 </body>
 </html>
